--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.GearUp"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".PeripheralsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BodyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConnectorsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CentralComponentsActivity"
+            android:exported="false" />
         <activity
             android:name=".CartActivity"
             android:exported="false" />
@@ -49,7 +61,7 @@
             android:name=".CategoryActivity"
             android:exported="false" />
         <activity
-            android:name=".InventoryManagement"
+            android:name=".SeeAllProductsActivity"
             android:exported="false" />
         <activity
             android:name=".HomePage"
