--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -21,13 +22,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".FirestoreTestActivity"
+            android:exported="false" />
+        <activity
             android:name=".CheckoutFormActivity"
             android:exported="false" />
         <activity
             android:name=".RecommendationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".DisplayRecommended"
             android:exported="false" />
         <activity
             android:name=".PopularProductDetail"
