--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".VideoResultsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VideosActivity"
+            android:exported="false" />
+        <activity
             android:name=".SeeAllServicesActivity"
             android:exported="false" />
         <activity
