--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".RecommendedServicesActivity"
+            android:exported="false" />
+        <activity
             android:name=".VideoResultsActivity"
             android:exported="false" />
         <activity
@@ -44,8 +47,8 @@
             android:exported="false" />
         <activity
             android:name=".CheckoutFormActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".RecommendationActivity"
             android:exported="false" />
