--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ProductReviewsActivity"
+            android:exported="false" />
+        <activity
             android:name=".StepByStepActivity"
             android:exported="false" />
         <activity
@@ -127,8 +130,8 @@
             android:exported="false" />
         <activity
             android:name=".Login"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ChooseUser"
             android:exported="false" />
